--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -1,6 +1,8 @@
 {
   "title": "Low Carbon Fuel Standard",
   "govOrg": "Government of British Columbia",
+  "gov": "Government",
+  "supplier": "Fuel Supplier",
   "balance": "Balance",
   "logout": "Log out",
   "login": {
@@ -20,5 +22,27 @@
   "ComplianceReports": "Complaince reports",
   "FileSubmissions": "File submissions",
   "Administration": "Administration",
-  "Organization": "Organization"
+  "Organization": "Organization",
+  "lcfsEmail": "lcfs@gov.bc.ca",
+  "admin": {
+    "OrgId": "Organization ID",
+    "Users": "Users",
+    "UserActivity": "User activity",
+    "Roles": "Roles",
+    "Role": "Role",
+    "FuelCodes": "Fuel codes",
+    "ComplianceReporting": "Compliance reporting",
+    "HistoricalDataEntry": "Historical data entry",
+    "Email": "Email",
+    "WorkPhone": "Work phone",
+    "MobilePhone": "Mobile phone",
+    "Phone": "Phone",
+    "Status": "Status",
+    "Title": "Title",
+    "usersNotFound": "No users found",
+    "newUserBtn": "New user",
+    "userName": "User name",
+    "roleTo": "Role conferred to",
+    "description": "Description"
+  }
 }
