--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -2,6 +2,10 @@
   "title": "Low Carbon Fuel Standard",
   "govOrg": "Government of British Columbia",
   "gov": "Government",
+  "yes": "Yes",
+  "no": "No",
+  "backBtn": "Back",
+  "saveBtn": "Save",
   "supplier": "Fuel Supplier",
   "balance": "Balance",
   "logout": "Log out",
