fix: idir specific roles labels

--- a/frontend/src/assets/locales/en/admin.json
+++ b/frontend/src/assets/locales/en/admin.json
@@ -38,14 +38,14 @@
     "phone": "Phone",
     "mobilePhone": "Mobile phone",
     "status": "status",
-    "active": "Active, user can login to LCFS portal",
-    "inactive": "Inactive, user cannot login to LCFS portal",
+    "activeLabel": "Active, user can login to LCFS portal",
+    "inactiveLabel": "Inactive, user cannot login to LCFS portal",
     "admin": "Administrator",
     "adminRole": "can add/edit IDIR users and assign roles and add/edit organizations, BCeID users and assign roles.",
     "analyst": "Analyst",
     "analystRole": "can make recommendations on transfers, transactions and compliance reports, manage file submissions and add/edit fuel codes.",
-    "complianceMgr": "Compliance manager",
-    "complianceMgrRole": "can make recommendations on compliance reports.",
+    "cMgr": "Compliance manager",
+    "cMgrRole": "can make recommendations on compliance reports.",
     "director": "Director",
     "directorRole": "can assess compliance reports and approve transactions.",
     "optional": "optional"
