fix: styles and label changes

--- a/frontend/src/assets/locales/en/admin.json
+++ b/frontend/src/assets/locales/en/admin.json
@@ -35,19 +35,26 @@
     "idirUserName": "IDIR user name",
     "bceidUserName": "BCEID user name",
     "email": "Email address",
+    "bceidEmail": "Email address associated with the BCeID user account",
+    "bceidAltEmail": "Alternate email for notifications",
     "phone": "Phone",
     "mobilePhone": "Mobile phone",
     "status": "status",
     "activeLabel": "Active, user can login to LCFS portal",
     "inactiveLabel": "Inactive, user cannot login to LCFS portal",
-    "admin": "Administrator",
-    "adminRole": "can add/edit IDIR users and assign roles and add/edit organizations, BCeID users and assign roles.",
-    "analyst": "Analyst",
-    "analystRole": "can make recommendations on transfers, transactions and compliance reports, manage file submissions and add/edit fuel codes.",
-    "cMgr": "Compliance manager",
-    "cMgrRole": "can make recommendations on compliance reports.",
-    "director": "Director",
-    "directorRole": "can assess compliance reports and approve transactions.",
+    "administrator": "can add/edit IDIR users and assign roles and add/edit organizations, BCeID users and assign roles.",
+    "analyst": "can make recommendations on transfers, transactions and compliance reports, manage file submissions and add/edit fuel codes.",
+    "compliance_manager": "can make recommendations on compliance reports.",
+    "director": "can assess compliance reports and approve transactions.",
+    "manageUsrs": "Manage users",
+    "manageUsrsRole": "can add/edit BCeID users and assign roles.",
+    "transferRole": "can create/save transfers and submit files.",
+    "cRpt": "Compliance reporting",
+    "cRptRole": "can create/save compliance reports and submit files.",
+    "signAuth": "Signing authority",
+    "signAuthRole": "can sign and submit compliance reports to government and transfers to trade partners/government.",
+    "readOnly": "Ready only",
+    "readOnlyRole": "can view transactions, compliance reports and files.",
     "optional": "optional"
   }
 }
