--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -26,6 +26,7 @@
   "Dashboard": "Dashboard",
   "Organizations": "Organizations",
   "Transactions": "Transactions",
+  "Transfer": "Transfer",
   "ComplianceReports": "Complaince reports",
   "FileSubmissions": "File submissions",
   "Administration": "Administration",
