--- a/frontend/src/assets/locales/en/organization.json
+++ b/frontend/src/assets/locales/en/organization.json
@@ -42,6 +42,7 @@
   "showActiveUsersBtn": "Show active users",
   "addOrgBtn": "Add organization",
   "addOrgTitle": "Add organization",
+  "editOrgTitle": "Edit organization",
   "errMsg": "Error occurred. Please retry. For ongoing issues, contact support.",
   "toUpdateMsg": " to update address information."
 }
