feat: added labels for transfer views, updated transfer view to show real data

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -4,14 +4,20 @@
   "gov": "Government",
   "yes": "Yes",
   "no": "No",
+  "unknown": "Unknown",
   "backBtn": "Back",
+  "cancelBtn": "Cancel",
   "saveBtn": "Save",
   "supplier": "Fuel Supplier",
   "balance": "Balance",
   "logout": "Log out",
   "complianceUnits": "Compliance units",
+  "quantity": "Quantity",
   "inReserve": "In reserve",
   "status": "Status",
+  "confirmation": "Confirmation",
+  "submitError": "Error occurred while submitting. Please retry. For ongoing issues, contact support.",
+  "success": "success",
   "login": {
     "loginMessage": "Login with",
     "troubleMessage": "Trouble logging in?"
