--- a/frontend/src/assets/locales/en/organization.json
+++ b/frontend/src/assets/locales/en/organization.json
@@ -43,6 +43,6 @@
   "addOrgBtn": "Add organization",
   "addOrgTitle": "Add organization",
   "editOrgTitle": "Edit organization",
-  "errMsg": "Error occurred. Please retry. For ongoing issues, contact support.",
-  "toUpdateMsg": " to update address information."
+  "toUpdateMsg": " to update address information.",
+  "selectOrgLabel": "Select an Organization"
 }
