--- a/frontend/src/assets/locales/en/organization.json
+++ b/frontend/src/assets/locales/en/organization.json
@@ -47,6 +47,6 @@
   "toUpdateMsg": " to update address information.",
   "orgDetailsLabel": "Organization Details",
   "orgDetailsLoadingMsg": "Loading organization details...",
-  "createNewUsrLabel": "Create new BCeID account"
+  "createNewUsrLabel": "Create new BCeID account",
   "selectOrgLabel": "Select an Organization"
 }
