fix: User management permission issues and code & design optimization

--- a/frontend/src/assets/locales/en/organization.json
+++ b/frontend/src/assets/locales/en/organization.json
@@ -44,5 +44,8 @@
   "addOrgTitle": "Add organization",
   "editOrgTitle": "Edit organization",
   "toUpdateMsg": " to update address information.",
+  "orgDetailsLabel": "Organization Details",
+  "orgDetailsLoadingMsg": "Loading organization details...",
+  "createNewUsrLabel": "Create new BCeID account",
   "selectOrgLabel": "Select an Organization"
 }
