--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -31,9 +31,10 @@
   },
   "Dashboard": "Dashboard",
   "Organizations": "Organizations",
+  "Users": "Users",
   "Transactions": "Transactions",
   "Transfer": "Transfer",
-  "ComplianceReports": "Complaince reports",
+  "ComplianceReports": "Compliance reports",
   "FileSubmissions": "File submissions",
   "Administration": "Administration",
   "Organization": "Organization",
