Feat: LCFS - Send transfer to transfer partner organization #220

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -20,6 +20,15 @@
   "deleteSuccessText": "Draft transfer successfully deleted.",
   "deleteConfirmText": "Are you sure you want to delete this draft?",
   "deleteErrorText": "Error deleting transfer",
+  "sendSuccessText": "Transfer successfully sent.",
+  "sendErrorText": "Error sending transfer",
+  "trnsSummary": "Transfer summary",
+  "complianceUnitsFrom": "compliance units from",
+  "numberOfUnitsToTrns": "Number of units to be transferred",
+  "valuePerUnit": "Value per unit",
+  "totalVal": "Total value",
+  "AgreementDt": "Agreement Date",
+  "sendConfirmText": "Are you sure you want to sign and send this transfer to ",
   "creatingText": "Creating Draft Transfer...",
   "updatingText": "Updating Draft Transfer...",
   "processingText": "Processing Transfer...",
