fix: update transaction button to transfer button

--- a/frontend/src/assets/locales/en/transaction.json
+++ b/frontend/src/assets/locales/en/transaction.json
@@ -14,7 +14,7 @@
   "txnId": "Transaction ID",
   "noTxnsFound": "No transactions found",
   "txnDownloadFailMsg": "Failed to download transaction information.",
-  "newTxnBtn": "New transaction",
+  "newTransferBtn": "New transfer",
   "compliancePeriod": "Compliance Period",
   "type": "Type",
   "complianceUnitsFrom": "Compliance Units From",
