Feat: LCFS - Misc clean up for navigation headings pages #390

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -34,7 +34,7 @@
   "Users": "Users",
   "Transactions": "Transactions",
   "Transfer": "Transfer",
-  "ComplianceReports": "Compliance reports",
+  "ComplianceReporting": "Compliance reporting",
   "FileSubmissions": "File submissions",
   "Administration": "Administration",
   "Organization": "Organization",
