Feat: LCFS - Government users can leave comments to organizations #261

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -44,6 +44,10 @@
   "agrDateDescText": "Date on which the written agreement for the transfer was reached between the organizations:",
   "commentsLabel": "Comments (optional)",
   "commentsDescText": "Your comments will be visible to both organizations of the transfer and government:",
+  "commentSaveSuccessText": "Comment successfully saved.",
+  "commentSaveErrorText": "Error saving comment",
+  "govCommentLabel": "Government comments to organizations (optional)",
+  "toOrgCommentLabel": "Your comments (optional)",
   "declineTransferBtn": "Decline transfer",
   "declineConfirmText": "Are you sure you want to decline this transfer?",
   "declineSuccessText": "Transfer successfully declined.",
