feat: sign and submit transfer complete

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -16,6 +16,7 @@
   "rescindConfirmText": "Are you sure you want to rescind this transfer?",
   "saveDraftBtn": "Save Draft",
   "signAndSendBtn": "Sign and send",
+  "signAndSubmitBtn": "Sign and submit",
   "deleteDraftBtn": "Delete Draft",
   "createdText": "Draft transfer successfully created.",
   "updatedText": "Draft transfer successfully updated.",
@@ -31,6 +32,7 @@
   "totalVal": "Total value",
   "AgreementDt": "Agreement Date",
   "sendConfirmText": "Are you sure you want to sign and send this transfer to ",
+  "submitConfirmText": "Are you sure you want to sign and submit this transfer to ",
   "creatingText": "Creating Draft Transfer...",
   "updatingText": "Updating Draft Transfer...",
   "processingText": "Processing Transfer...",
