fix: add in success and error messages

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -61,5 +61,7 @@
   "refuseTransferBtn": "Refuse transfer",
   "returnToAnalystBtn": "Return to analyst",
   "returnWarningText": "You are strongly encouraged to provide an explanation to the analyst as to why the transfer is being returned.",
-  "returnConfirmText": "Are you sure you want to return the transfer to the Analyst? This will change the status of the transfer back to Submitted."
+  "returnConfirmText": "Are you sure you want to return the transfer to the Analyst? This will change the status of the transfer back to Submitted.",
+  "returnSuccessText": "Transfer successfully returned.",
+  "returnErrorText": "Error returning transfer"
 }
