--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -67,5 +67,9 @@
   "returnErrorText": "Error returning transfer",
   "analystRecommend": "Analyst recommendation to the director",
   "recommendRefuse": "Recommend refuse",
-  "recommendRecord": "Recommend record"
+  "recommendRecord": "Recommend record",
+  "recommendBtn": "Recommend",
+  "recommendConfirmText": "Are you sure you want to recommend this transfer?",
+  "recommendSuccessText": "Transfer successfully recommended.",
+  "recommendErrorText": "Error recommending transfer"
 }
