Fix: LCFS - Edit a draft transfer #230

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -1,7 +1,8 @@
 {
   "title": "Transfers",
   "transfers": " transfers ",
-  "transferID": "Transfer-ID:",
+  "transferID": "Transfer ID: ",
+  "editTransferID": "Edit Transfer ID: ",
   "editTransfer": "Edit Transfer",
   "newTransfer": "New Transfer",
   "effectiveText": "A transfer is not effective until it is recorded by the Director.",
