--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -14,6 +14,7 @@
   "txnHistory": "Transaction History",
   "rescindTransferBtn": "Rescind Transfer",
   "rescindErrorText": "Error rescinding transfer",
+  "rescindSuccessText": "Transfer successfully rescinded.",
   "rescindConfirmText": "Are you sure you want to rescind this transfer?",
   "saveDraftBtn": "Save Draft",
   "signAndSendBtn": "Sign and send",
