--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -2,8 +2,7 @@
   "title": "Transfers",
   "transfers": " transfers ",
   "transferID": "Transfer ID: ",
-  "editTransferID": "Edit Transfer ID: ",
-  "editTransfer": "Edit Transfer",
+  "editTransferID": "Edit transfer ID: ",
   "newTransfer": "New Transfer",
   "effectiveText": "A transfer is not effective until it is recorded by the Director.",
   "considerationText": "Transfers must indicate whether they are for consideration, and if so, the fair market value of the consideration in Canadian dollars per compliance unit.",
