LCFS - Refactor ViewTransfer and AddEditTransfer components #455

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -11,32 +11,43 @@
   "complianceUnitsPerTvo": " per compliance unit for a total value of ",
   "for": " for ",
   "txnHistory": "Transaction History",
-  "rescindTransferBtn": "Rescind Transfer",
-  "rescindErrorText": "Error rescinding transfer",
-  "rescindSuccessText": "Transfer successfully rescinded.",
+  "actionBtns": {
+    "saveDraftBtn": "Save Draft",
+    "signAndSendBtn": "Sign and send",
+    "signAndSubmitBtn": "Sign and submit",
+    "deleteDraftBtn": "Delete draft",
+    "rescindTransferBtn": "Rescind transfer",
+    "declineTransferBtn": "Decline transfer",
+    "recordTransferBtn": "Record transfer",
+    "refuseTransferBtn": "Refuse transfer",
+    "returnToAnalystBtn": "Return to analyst",
+    "recommendBtn": "Recommend"
+  },
+  "saved": "saved",
+  "actionMsgs": {
+    "createdText": "Draft transfer successfully created.",
+    "updatedText": "Draft transfer successfully updated.",
+    "errorCreateText": "Error creating transfer",
+    "errorUpdateText": "Error updating transfer",
+    "successText": "Transfer successfully {{status}}"
+  },
   "rescindConfirmText": "Are you sure you want to rescind this transfer?",
-  "saveDraftBtn": "Save Draft",
-  "signAndSendBtn": "Sign and send",
-  "signAndSubmitBtn": "Sign and submit",
-  "deleteDraftBtn": "Delete Draft",
-  "createdText": "Draft transfer successfully created.",
-  "updatedText": "Draft transfer successfully updated.",
-  "deleteSuccessText": "Draft transfer successfully deleted.",
   "deleteConfirmText": "Are you sure you want to delete this draft?",
-  "deleteErrorText": "Error deleting transfer",
-  "sendSuccessText": "Transfer successfully sent.",
-  "sendErrorText": "Error sending transfer",
+  "sendConfirmText": "Are you sure you want to sign and send this transfer to ",
+  "submitConfirmText": "Are you sure you want to sign and submit this transfer to ",
+  "declineConfirmText": "Are you sure you want to decline this transfer?",
+  "recordConfirmText": "Are you sure you want to record this transfer?",
+  "refuseConfirmText": "Are you sure you want to record this transfer?",
+  "recommendConfirmText": "Are you sure you want to recommend this transfer?",
+  "returnConfirmText": "Are you sure you want to return the transfer to the Analyst? This will change the status of the transfer back to Submitted.",
   "trnsSummary": "Transfer summary",
   "complianceUnitsFrom": "compliance units from",
   "numberOfUnitsToTrns": "Number of units to be transferred",
   "valuePerUnit": "Value per unit",
   "totalVal": "Total value",
   "AgreementDt": "Agreement Date",
-  "sendConfirmText": "Are you sure you want to sign and send this transfer to ",
-  "submitConfirmText": "Are you sure you want to sign and submit this transfer to ",
-  "creatingText": "Creating Draft Transfer...",
-  "updatingText": "Updating Draft Transfer...",
-  "processingText": "Processing Transfer...",
+  "loadingText": "Loading transfer...",
+  "processingText": "Processing transfer...",
   "detailsLabel": "Transfer Details (required)",
   "fairMarketText": "The fair market value of any consideration, in CAD",
   "totalValueText": " per compliance unit for a total value of ",
@@ -47,29 +58,10 @@
   "agrDateDescText": "Date on which the written agreement for the transfer was reached between the organizations:",
   "commentsLabel": "Comments (optional)",
   "commentsDescText": "Your comments will be visible to both organizations of the transfer and government:",
-  "commentSaveSuccessText": "Comment successfully saved.",
-  "commentSaveErrorText": "Error saving comment",
   "govCommentLabel": "Government comments to organizations (optional)",
   "toOrgCommentLabel": "Your comments (optional)",
-  "declineTransferBtn": "Decline transfer",
-  "declineConfirmText": "Are you sure you want to decline this transfer?",
-  "declineSuccessText": "Transfer successfully declined.",
-  "declineErrorText": "Error declining transfer",
-  "recordTransferBtn": "Record transfer",
-  "recordConfirmText": "Are you sure you want to record this transfer?",
-  "recordSuccessText": "Transfer successfully recorded.",
-  "recordErrorText": "Error recording transfer",
-  "refuseTransferBtn": "Refuse transfer",
-  "returnToAnalystBtn": "Return to analyst",
   "returnWarningText": "You are strongly encouraged to provide an explanation to the analyst as to why the transfer is being returned.",
-  "returnConfirmText": "Are you sure you want to return the transfer to the Analyst? This will change the status of the transfer back to Submitted.",
-  "returnSuccessText": "Transfer successfully returned.",
-  "returnErrorText": "Error returning transfer",
   "analystRecommend": "Analyst recommendation to the director",
   "recommendRefuse": "Recommend refuse",
-  "recommendRecord": "Recommend record",
-  "recommendBtn": "Recommend",
-  "recommendConfirmText": "Are you sure you want to recommend this transfer?",
-  "recommendSuccessText": "Transfer successfully recommended.",
-  "recommendErrorText": "Error recommending transfer"
+  "recommendRecord": "Recommend record"
 }
