feat: add org balance widget to BCeID dashboard

--- a/frontend/src/assets/locales/en/organization.json
+++ b/frontend/src/assets/locales/en/organization.json
@@ -47,5 +47,11 @@
   "orgDetailsLabel": "Organization Details",
   "orgDetailsLoadingMsg": "Loading organization details...",
   "createNewUsrLabel": "Create new BCeID account",
-  "selectOrgLabel": "Select an Organization"
+  "selectOrgLabel": "Select an Organization",
+  "loadingBalanceDetails": "Loading balance details...",
+  "unableToFetchBalanceDetails": "Unable to fetch balance details.",
+  "hasABalanceOf": "has a balance of",
+  "complianceUnits": "compliance units",
+  "inReserve": "in reserve",
+  "inReserveTooltip": "In-reserve are the portion of compliance units in your balance that are currently pending the completion of a transaction. For example, transferring credits to another organization or a compliance report awaiting assessment by the director. Compliance units that are in-reserve cannot be transferred or otherwise used until the pending transaction has been completed."
 }
