Feat: LCFS - Create 'Fuel code' landing page #431

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -38,5 +38,6 @@
   "FileSubmissions": "File submissions",
   "Administration": "Administration",
   "Organization": "Organization",
+  "FuelCodes": "Fuel codes",
   "lcfsEmail": "lcfs@gov.bc.ca"
 }
