Feat: LCFS - Implement AG Grid input fields for new fuel code entries #432

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -3,6 +3,10 @@
   "noFuelCodesFound": "No fuel codes found",
   "fuelCodeDownloadBtn": "Download as Excel",
   "fuelCodeDownloadFailMsg": "Failed to download fuel code information.",
+  "fuelCodeLoadFailMsg": "Failed to load fuel code information.",
+  "newFuelCodeTitle": "Add new fuel code(s)",
+  "addRow": "Add row",
+  "rows": "rows",
   "fuelCodeColLabels": {
     "status": "Status",
     "prefix": "Prefix",
