added ability to validate

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -30,5 +30,11 @@
     "formerCompany": "Former company",
     "lastUpdated": "Last updated",
     "notes": "Notes"
+  },
+  "validateMsg": {
+    "isRequired": "{{field}} is required",
+    "prefix": "Select valid prefix",
+    "fuel": "Select valid fuel",
+    "fuelCode": "Fuel code should be a valid number"
   }
 }
