backend migration for fuel code

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -5,7 +5,7 @@
   "fuelCodeDownloadFailMsg": "Failed to download fuel code information.",
   "fuelCodeLoadFailMsg": "Failed to load fuel code information.",
   "newFuelCodeTitle": "Add new fuel code(s)",
-  "saveDraftBtn": "Save draft code(s)",
+  "saveDraftBtn": "Save draft code",
   "addRow": "Add row",
   "rows": "rows",
   "fuelCodeColLabels": {
