fix: updating labels to properly show recommendation based on analyst boolean

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -74,7 +74,8 @@
     "Deleted": "Draft deleted",
     "Sent": "Signed and sent",
     "Submitted": "Signed and submitted",
-    "Recommended": "Recommended recording transfer",
+    "RecommendedRecord": "Recommended recording transfer",
+    "RecommendedRefuse": "Recommended refusing transfer",
     "Recorded": "Recorded",
     "Refused": "Refused",
     "Declined": "Declined",
